[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/monofonto rg.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/SettingsMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.529412, 0.6, 0.733333, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -50.0
margin_right = 193.0
margin_bottom = 50.0
custom_constants/separation = 28

[node name="SoundSlider" type="Control" parent="VBoxContainer"]
margin_right = 386.0
margin_bottom = 48.0
rect_min_size = Vector2( 386, 48 )

[node name="Label" type="Label" parent="VBoxContainer/SoundSlider"]
margin_top = -5.0
margin_right = 130.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "sound"

[node name="HSlider" type="HSlider" parent="VBoxContainer/SoundSlider"]
margin_left = 146.0
margin_top = 32.0
margin_right = 386.0
margin_bottom = 48.0

[node name="SliderLabel" type="Label" parent="VBoxContainer/SoundSlider/HSlider"]
margin_left = 3.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = -2.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "100"
script = ExtResource( 1 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 0

[node name="MusicSlider" type="Control" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 386.0
margin_bottom = 124.0
rect_min_size = Vector2( 386, 48 )

[node name="Label" type="Label" parent="VBoxContainer/MusicSlider"]
margin_top = -5.0
margin_right = 130.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "music"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicSlider"]
margin_left = 146.0
margin_top = 32.0
margin_right = 386.0
margin_bottom = 48.0

[node name="SliderLabel" type="Label" parent="VBoxContainer/MusicSlider/HSlider"]
margin_left = 3.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = -2.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "100"
script = ExtResource( 1 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 0

[node name="LanguageOption" type="OptionButton" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 386.0
margin_bottom = 210.0
rect_min_size = Vector2( 386, 58 )
text = "English"
items = [ "English", null, false, 0, null, "Türkçe", null, false, 1, null, "Deutsch", null, false, 2, null, "Dansk", null, false, 3, null ]
selected = 0
